--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,17 @@
-
-Development instructions for backend development, optional but strongly recommended:
-1)Create a virtual enviornment with the following command:python -m venv venv
-2)Activate the virtual enviorment with source venv/bin/activate
-
-3) Install the required packages with pip install Flask Flask_Sqlalchemy
-4) Type pip list or pip freeze, see if this is displayed:
-
 Package           Version
 ----------------- -------
 click             8.1.3
 Flask             2.2.3
+flask-marshmallow 0.14.0
 Flask-SQLAlchemy  3.0.3
 itsdangerous      2.1.2
 Jinja2            3.1.2
 MarkupSafe        2.1.2
+marshmallow       3.19.0
+packaging         23.0
 pip               22.3.1
 setuptools        65.5.0
+six               1.16.0
 SQLAlchemy        2.0.4
 typing_extensions 4.5.0
 Werkzeug          2.2.3
