--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,8 +6,14 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.3.0",
     "axios": "^1.3.4",
+    "d3": "^7.8.2",
+    "d3-hexbin": "^0.2.2",
+    "d3-shotchart": "^0.0.2",
     "lodash": "^4.17.21",
+    "nba": "^4.15.0",
+    "nba-api-client": "^1.1.2",
     "node-fetch": "^2.6.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
