--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
     "react-tweet-embed": "^2.0.0",
     "react-twitter-embed": "^4.0.4",
     "web-vitals": "^2.1.4"
